appId: com.nguyenchu.kjorebok
---
- runFlow:
    file: ../flows/login.yaml
- tapOn: "Sporing"
- assertVisible: "Status for automatisk turstart"
- assertVisible: "Åpne feilsøking"
- tapOn: "Åpne feilsøking"
- assertVisible: "Feilsøking"
- assertVisible: "Posisjonstjenester"
